# ffmpeg-gui-gtk

src/: easyffmpeg.gresource.xml  ffmpeg_actions.vala  main.vala  meson.build  window.ui~
